required inputs fixed

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
           />
           <label class="js-label-error"></label>
           <button class="button js-btn-add">Añadir</button>
+          <!--<input type="submit" class="button js-btn-add" value="Añadir" />-->
           <button class="button-cancel js-btn-cancel">Cancelar</button>
         </form>
       </section>
